--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
         <title>Github</title>
     </head>
     <body>
-        <p>Hello from github</p>
+        <p>Hello(s) from github</p>
     </body>
 </html>
 
